--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "emiketic-starter-meteor",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
     "postinstall": "husky install",
     "start": "meteor run",
