--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "less": "^4.1.2",
+    "less-loader": "^5.0.0",
     "prettier": "^2.6.2",
     "standard-version": "^9.3.2"
   }
